--- a/_sass/1-modules/navigation.scss
+++ b/_sass/1-modules/navigation.scss
@@ -69,24 +69,24 @@ input#navToggle ~ label > span::after {
 }
 
 nav {
-  position: absolute;
-  z-index: -1;
-  top: 3rem;
   left: -110%;
-  width: 100%;
-  transition: 0.22s ease-in-out;
   padding: 1rem 0;
+  position: absolute;
+  top: 3rem;
+  transition: 0.22s ease-in-out;
+  width: 100%;
+  z-index: -1;
 }
 
 nav::after {
-  content: "";
-  position: absolute;
-  top: 10px;
-  z-index: -1;
-  height: 100vh;
-  width: 100vw;
   background-color: $white;
   background-size: cover;
+  content: "";
+  height: 100vh;
+  position: absolute;
+  top: 10px;
+  width: 100vw;
+  z-index: -1;
 }
 
 nav ul {
@@ -94,13 +94,15 @@ nav ul {
 }
 
 nav ul li a {
-  display: inline-block;
-  text-decoration: none;
-  width: 100%;
-  padding: 0.25rem 1rem;
-  color: $black;
   border-bottom: solid 1px rgba(255, 255, 255, 0.5);
+  color: $black;
+  display: inline-block;
+  font-size: 1.15rem;
+  font-weight: 700;
+  padding: 0.5rem 1rem;
+  text-decoration: none;
   transition: 0.14s ease-in-out;
+  width: 100%;
 }
 
 nav ul li a:hover {
